# oshu

./: .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  Makefile.am  README.md  config.h.in  configure.ac  index.md  oshu.desktop  x-osu.xml
docs/: Doxyfile.in  Makefile.am  index.md  oshu.1.in
include/audio/: audio.h  library.h  resampler.h  sample.h  stream.h  track.h
include/beatmap/: beatmap.h  geometry.h  path.h
include/core/: geometry.h  log.h
include/game/: base.h  clock.h  controls.h  game.h  mode.h  osu.h  tty.h
include/graphics/: display.h  paint.h  texture.h  transitions.h  view.h
include/gui/: audio.h  background.h  cursor.h  gui.h  metadata.h  osu.h  score.h  widget.h  window.h
include/osu/: osu.h
include/ui/: audio.h  background.h  cursor.h  metadata.h  osu.h  score.h  shell.h  ui.h  widget.h  window.h
include/video/: display.h  paint.h  texture.h  transitions.h  view.h
lib/: CMakeLists.txt  index.md
lib/audio/: audio.cc  library.cc  resampler_avr.cc  resampler_swr.cc  sample.cc  stream.cc  track.cc
lib/beatmap/: geometry.cc  helpers.cc  parser.cc  parser.h  path.cc  tokens.h
lib/core/: geometry.cc  index.dox  log.cc
lib/game/: actions.cc  base.cc  clock.cc  controls.cc  game.cc  helpers.cc  index.dox  osu.cc  tty.cc
lib/game/screens/: pause.cc  play.cc  score.cc  screens.h
lib/graphics/: display.cc  paint.cc  texture.cc  transitions.cc  view.cc
lib/gui/: audio.cc  background.cc  cursor.cc  index.dox  metadata.cc  osu.cc  osu_paint.cc  score.cc  window.cc
lib/gui/screens/: pause.cc  play.cc  score.cc  screens.h
lib/osu/: draw.cc  osu.cc  paint.cc
lib/ui/: audio.cc  background.cc  cursor.cc  index.dox  metadata.cc  osu.cc  osu_paint.cc  score.cc  shell.cc  window.cc
lib/ui/screens/: pause.cc  play.cc  score.cc  screens.h
lib/video/: display.cc  index.dox  paint.cc  texture.cc  transitions.cc  view.cc
share/: CMakeLists.txt  CREDITS  Makefile.am  oshu.desktop  x-osu.xml
share/desktop/: CMakeLists.txt  oshu.desktop  oshu.xml
share/man/: CMakeLists.txt  oshu-library.1.in  oshu.1.in
share/skins/: CMakeLists.txt
share/web/: CMakeLists.txt  style.css
src/: CMakeLists.txt  Makefile.am  audio.c  audio.h  beatmap.c  beatmap.h  game.c  game.h  geometry.c  geometry.h  graphics.c  graphics.h  index.md  log.h  oshu-library.cc  oshu.c  oshu.cc  oshu.h  sample.c  sample.h
src/audio/: audio.c  audio.cc  audio.h  channel.c  channel.h  library.c  library.cc  library.h  pipeline.c  sample.c  sample.cc  sample.h  stream.c  stream.cc  stream.h  track.c  track.cc  track.h
src/beatmap/: beatmap.c  beatmap.h  geometry.c  geometry.cc  geometry.h  helpers.c  helpers.cc  parser.c  parser.cc  parser.h  tokens.h
src/core/: index.dox
src/game/: actions.c  actions.cc  background.c  clock.c  clock.cc  clock.h  controls.c  controls.cc  controls.h  game.c  game.cc  game.h  helpers.c  helpers.cc  metadata.c  mode.h  modes.h  osu.c  pause.c  play.c  progression.c  score.c  screen.h  screens.h  tty.c  tty.cc  tty.h  widgets.h
src/game/osu/: draw.c  osu.c  osu.h  paint.c
src/game/screens/: pause.c  pause.cc  play.c  play.cc  score.c  score.cc  screens.h
src/game/ui/: background.c  cursor.c  metadata.c  progression.c  score.c  ui.h
src/graphics/: display.c  display.cc  display.h  draw.c  draw.h  graphics.c  graphics.h  paint.c  paint.cc  paint.h  texture.c  texture.cc  texture.h  transitions.c  view.c  view.cc  view.h
src/oshu/: CMakeLists.txt  main.cc
src/oshu-library/: CMakeLists.txt  build_index.cc  command.h  library.cc  library.h  main.cc
src/osu/: draw.c  draw.cc  osu.c  osu.cc  osu.h  paint.c  paint.cc
src/tests/: Makefile.am
src/ui/: audio.c  audio.cc  audio.h  background.c  background.cc  background.h  cursor.c  cursor.cc  cursor.h  metadata.c  metadata.cc  metadata.h  progression.c  score.c  score.cc  score.h  ui.h
test/: CMakeLists.txt  Kaori Oda - Zero Tokei (Short ver.) (ShogunMoon) [Shining].osu  zerotokei.cc
